==> gimasi/osG/board/NXP/MK28FN2M0VMI15/src/drivers/board-SpiSupport.c <==
#include "board-SpiSupport.h"
#define TOT_SPI FSL_FEATURE_SOC_DSPI_COUNT

dspi_clock_phase_t _osg_board_Spi_decodePhase(const osg_SpiPhase phase)
{
    switch (phase)
    {
        case OSG_SPI_PHASE_1ST:
            return kDSPI_ClockPhaseFirstEdge;
        case OSG_SPI_PHASE_2ND:
            return kDSPI_ClockPhaseSecondEdge;

        default:
            osg_error("ERROR: Ivalid SPI phase.");
    }

    return kDSPI_ClockPhaseFirstEdge;
}

dspi_clock_polarity_t _osg_board_Spi_decodePolarity(const osg_SpiPolarity polarity)
{
    switch (polarity)
    {
        case OSG_SPI_POLARITY_LOW:
            return kDSPI_ClockPolarityActiveLow;
        case OSG_SPI_POLARITY_HIGH:
            return kDSPI_ClockPolarityActiveHigh;

        default:
            osg_error("ERROR: Invalid SPI polarity.");
    }

    return kDSPI_ClockPolarityActiveLow;
}

dspi_shift_direction_t _osg_board_Spi_decodeEndianess(const osg_SpiEndianess endianess)
{
    switch (endianess)
    {
        case OSG_SPI_MSB_FIRST:
            return kDSPI_MsbFirst;
        case OSG_SPI_LSB_FIRST:
            return kDSPI_LsbFirst;

        default:
            osg_error("ERROR: Invalid SPI endianess.");
    }

    return kDSPI_MsbFirst;
}

void _osg_board_Spi_initSsPins(const osg_SpiId spiId, const osg_SpiSlaveSelectMode ssMode, const osg_GpioId * ssPins, const Size ssPinsSize, const uint16_t alterante)
{
    osg_assert(ssMode == OSG_SPI_SLAVE_SELECT_AUTO, "ASSERT FAILED: Invalid Slave Select mode for NXP board. Only AUTO is available.");
        
    for (Size i = 0; i < ssPinsSize; ++i)
    {
        osg_GpioId ss = ssPins[i];
        osg_GpioPort port = osg_Gpio_getPort(ss);
        _osg_board_Gpio_enablePort(port);
        osg_board_Port * boardPort = _osg_board_Gpio_getPortHandler(port);
        uint32_t pin = _osg_board_Gpio_decodeGpioPin(osg_Gpio_getPin(ss));
        
//        osg_GpioAlternateFunction alt;
//        switch (spiId)
//        {
//#ifdef SPI0
//            case OSG_SPI0:
//                alt = OSG_GPIO_ALTERNATE_SPI0_SS;
//                break;
//#endif
//#ifdef SPI1
//            case OSG_SPI1:
//                alt = OSG_GPIO_ALTERNATE_SPI1_SS;
//                break;
//#endif
//#ifdef SPI2
//            case OSG_SPI2:
//                alt = OSG_GPIO_ALTERNATE_SPI2_SS;
//                break;
//#endif
//#ifdef SPI3
//            case OSG_SPI3:
//                alt = OSG_GPIO_ALTERNATE_SPI3_SS;
//                break;
//#endif
//            default:
//                osg_error("ERROR: Invalid SPI port.");
//        }

        port_mux_t mux = (port_mux_t)alterante;
        PORT_SetPinMux(boardPort, pin, mux);
    }
}

void _osg_board_Spi_deinitSSPins(const osg_SpiId id, osg_GpioId * ssList, const Size ssListSize)
{
    for (Size i = 0; i < ssListSize; ++i)
    {
        osg_GpioId ss = ssList[i];
        osg_GpioPort port = osg_Gpio_getPort(ss);
        osg_board_Port * boardPort = _osg_board_Gpio_getPortHandler(port);
        uint32_t pin = _osg_board_Gpio_decodeGpioPin(osg_Gpio_getPin(ss));
        PORT_SetPinMux(boardPort, pin, kPORT_PinDisabledOrAnalog);
    }
}

void _osg_board_Spi_doBufferedSend(osg_SpiImpl * spi)
{
    if (osg_CircularFifo_isEmpty(&spi->txFifo)) return;
    const osg_SpiFlags restore = spi->flags;
    spi->flags &= ~OSG_SPI_FLAG_IS_NB_SEND;
    spi->flags |= OSG_SPI_FLAG_IS_SEND;
    void * buffer = NULL;
    Size size = 0;
    osg_CircularFifo_getFilledBuffer(&spi->txFifo, &buffer, &size);

    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandlerByInstance(spi->handler);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    status_t ok;

    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        dspi_transfer_t xfer = {0};
        xfer.txData = buffer;
        xfer.rxData = NULL;
        xfer.dataSize = size;
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;

        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterSendBuffCallback,
                                        NULL);
        ok = DSPI_MasterTransferNonBlocking(instance,
                                            &handle->masterHandle,
                                            &xfer);
    }
    else
    {
        dspi_transfer_t xfer = {0};
        xfer.txData = buffer;
        xfer.rxData = NULL;
        xfer.dataSize = size;
        xfer.configFlags = kDSPI_SlaveCtar0;

        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveSendBuffCallback,
                                       NULL);
        ok = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }


    if (ok != kStatus_Success) spi->flags = restore;
}

void _osg_board_Spi_doBufferedReceive(osg_SpiImpl * spi)
{
    if (osg_CircularFifo_isNull(&spi->rxFifo)
            || !(spi->flags & OSG_SPI_FLAG_RX_BUFF_ENABLED))
        return;
    
    const osg_SpiFlags restore = spi->flags;
    spi->flags &= ~OSG_SPI_FLAG_IS_NB_RECEIVE;
    spi->flags |= OSG_SPI_FLAG_IS_RECEIVE;

    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandlerByInstance(spi->handler);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    status_t ok;

    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        dspi_transfer_t xfer = {0};
        xfer.txData = NULL;
        xfer.rxData = &spi->rxByte;
        xfer.dataSize = 1;
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;

        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterRecvBuffCallback,
                                        NULL);
        ok = DSPI_MasterTransferNonBlocking(instance,
                                            &handle->masterHandle,
                                            &xfer);
    }
    else
    {
        dspi_transfer_t xfer = {0};
        xfer.txData = NULL;
        xfer.rxData = &spi->rxByte;
        xfer.dataSize = 1;
        xfer.configFlags = kDSPI_SlaveCtar0;

        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveRecvBuffCallback,
                                       NULL);
        ok = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }

    if (ok != kStatus_Success) spi->flags = restore;
}
