==> gimasi/osG/board/STM32/L476/src/drivers/board-SpiSupport.c <==
#include "board-SpiSupport.h"
#define COUNT_SPI0 1
#define COUNT_SPI0 0
#define COUNT_SPI1 1
#define COUNT_SPI1 0
#define COUNT_SPI2 1
#define COUNT_SPI2 0
#define COUNT_SPI3 1
#define COUNT_SPI3 0
#define COUNT_SPI4 1
#define COUNT_SPI4 0
#define TOT_SPI (COUNT_SPI0 + COUNT_SPI1 + COUNT_SPI2 + COUNT_SPI3 + COUNT_SPI4)

uint32_t _osg_board_Spi_decodePhase(const osg_SpiPhase phase)
{
    switch (phase)
    {
        case OSG_SPI_PHASE_1ST:
            return SPI_PHASE_1EDGE;
        case OSG_SPI_PHASE_2ND:
            return SPI_PHASE_2EDGE;
        default:
            osg_error("ERROR: Impossible to retrieve SPI phase.");
    }

    // disable warning
    return 0;
}

uint32_t _osg_board_Spi_decodePolarity(const osg_SpiPolarity polarity)
{
    switch (polarity)
    {
        case OSG_SPI_POLARITY_LOW:
            return SPI_POLARITY_LOW;
        case OSG_SPI_POLARITY_HIGH:
            return SPI_POLARITY_HIGH;
        default:
            osg_error("ERROR: Impossible to retrieve SPI polarity.");
    }

    // disable warning
    return 0;
}

uint32_t _osg_board_Spi_decodeEndianess(const osg_SpiEndianess endianess)
{
    switch (endianess)
    {
        case OSG_SPI_MSB_FIRST:
            return SPI_FIRSTBIT_MSB;
        case OSG_SPI_LSB_FIRST:
            return SPI_FIRSTBIT_LSB;
        default:
            osg_error("ERROR: Impossible to retrieve SPI endianess.");
    }

    // disable warning
    return 0;
}

void _osg_board_Spi_initSSPins(const osg_SpiId spiId, const osg_GpioId * ssPins, const Size ssPinsSize, const osg_SpiSlaveSelectMode ssMode, const uint16_t alternate)
{
    for (Size i = 0; i < ssPinsSize; ++i)
    {
        osg_GpioId ss = ssPins[i];
        osg_GpioPort port = osg_Gpio_getPort(ss);
        _osg_board_Gpio_enablePort(port);
        GPIO_InitTypeDef  GPIO_InitStruct;
        GPIO_InitStruct.Pin       = _osg_board_Gpio_decodeGpioPin(osg_Gpio_getPin(ss));
        GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull      = GPIO_PULLDOWN;
        GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = alternate;
        GPIO_InitStruct.Pin = _osg_board_Gpio_decodeGpioPin(osg_Gpio_getPin(ss));

        if (ssMode == OSG_SPI_SLAVE_SELECT_INPUT)
            GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        HAL_GPIO_Init(_osg_board_Gpio_getPortHandler(port), &GPIO_InitStruct);
        _osg_board_Spi_deactivateSlave(ss);
    }
}

void _osg_board_Spi_deinitSSPins(const osg_SpiId id, osg_GpioId * ssList, const Size ssListSize)
{
    for (Size i = 0; i < ssListSize; ++i)
    {
        HAL_GPIO_DeInit(_osg_board_Gpio_getPortHandler(osg_Gpio_getPort(ssList[i])),
                        _osg_board_Gpio_decodeGpioPin(osg_Gpio_getPin(ssList[i])));
    }
}

void _osg_board_Spi_doBufferedSend(osg_SpiImpl * spi)
{
    if (osg_CircularFifo_isEmpty(&spi->txFifo))
    {
        if (spi->mode == OSG_SPI_MASTER_MODE)
            _osg_board_Spi_deactivateSlave(spi->lastSsPin);
        return;
    }
    
    const osg_SpiFlags restore = spi->flags;
    spi->flags &= ~OSG_SPI_FLAG_IS_NB_SEND;
    spi->flags |= OSG_SPI_FLAG_IS_SEND;
    void * buffer = NULL;
    Size size = 0;
    osg_CircularFifo_getFilledBuffer(&spi->txFifo, &buffer, &size);

    osg_board_SpiHandler * handler = (osg_board_SpiHandler *)spi->handler;
    const HAL_StatusTypeDef ok = HAL_SPI_Transmit_IT(handler, (uint8_t *) buffer, (uint16_t) size);

    if (ok != HAL_OK) spi->flags = restore;
}

void _osg_board_Spi_doBufferedReceive(osg_SpiImpl * spi)
{
    if (osg_CircularFifo_isNull(&spi->rxFifo)
            || !(spi->flags & OSG_SPI_FLAG_RX_BUFF_ENABLED))
        return;
    const osg_SpiFlags restore = spi->flags;
    spi->flags &= ~OSG_SPI_FLAG_IS_NB_RECEIVE;
    spi->flags |= OSG_SPI_FLAG_IS_RECEIVE;

    osg_board_SpiHandler * handler = (osg_board_SpiHandler *)spi->handler;
    const HAL_StatusTypeDef ok = HAL_SPI_Receive_IT(handler, &spi->rxByte, 1);

    if (ok != HAL_OK) spi->flags = restore;
}
